--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,10 +25,10 @@
     <string name="section_format">Hello World from section: %1$d</string>
 
 
-    <string name="tab_1">Label 1</string>
-    <string name="tab_2">Label 2</string>
-    <string name="tab_3">Label 3</string>
-    <string name="tab_4">Label 4</string>
+    <string name="tab_1">Home</string>
+    <string name="tab_2">Receive/scan</string>
+    <string name="tab_3">Send</string>
+    <string name="tab_4">Settings</string>
     <string name="tab_5">Label 5</string>
 
     <string name="menu_1">Menu 1</string>
